# jupyterlab-markup

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .python-version  .readthedocs.yml  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  index.ipynb  install.json  package.json  pyproject.toml  setup.cfg  setup.py  tsconfig.json  webpack.config.js
.binder/: environment.yml  postBuild
.github/workflows/: build.yml  cd.yml  ci.yml
demo/: Examples.ipynb  jupyter-lite.json  jupyter_lite_config.json  overrides.json
docs/: conf.py  configuring.md  demo.md  index.md  license.md
docs/_static/: theme.css
etc/: jupyterlab-markup-serverextension.json
jupyter-config/: jupyterlab_markup.json
jupyterlab_markup/: __init__.py  _version.py
schema/: core.json
src/: factories.ts  index.ts  manager.ts  markdown-it-deflist.d.ts  markdown-it-footnote.d.ts  markdown-it-sanitizer.d.ts  mermaid.ts  plugin.ts  plugins.ts  renderers.ts  settings.tsx  shim.ts  tokens.ts  utils.ts  widgets.ts
src/builtins/: anchor.ts  deflist.ts  diagrams.ts  dollarmath.ts  footnote.ts  index.ts  mermaid.ts  post-render.ts  replace-link.ts  svgbob.ts  task-lists.ts  typesetter-adaptor.ts  typesetter.ts
src/typings/: markdown-it-anchor.d.ts  markdown-it-deflist.d.ts  markdown-it-footnote.d.ts  markdown-it-replace-link.d.ts  markdown-it-task-lists.d.ts
src_py/jupyterlab_markup/: __init__.py
style/: base.css  index.css
