[build-system]
requires = [
    "hatchling>=1.3.1",
    "hatch-nodejs-version>=0.1.0",
    "jupyterlab>=3.0,==3.*",
]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-markup"
description = "Extensible markdown rendering support in markdown"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
authors = [
    { name = "Angus Hollands", email = "goosey15@gmail.com" },
]
keywords = [
    "Jupyter",
    "JupyterLab",
    "JupyterLab3",
    "Markdown",
    "MarkdownIt",
]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Mime Renderers",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
]
dynamic = [
    "version",
]

[project.urls]
"Bug Tracker" = "https://github.com/agoose77/jupyterlab-markup/issues"
Homepage = "https://github.com/agoose77/jupyterlab-markup.git"

[tool.hatch.version]
source = "nodejs"

[tool.hatch.build.targets.wheel.shared-data]
"install.json" = "share/jupyter/labextensions/@agoose77/jupyterlab-markup/install.json"
"jupyterlab_markup/labextension" = "share/jupyter/labextensions/@agoose77/jupyterlab-markup"

[tool.hatch.build.targets.sdist]
artifacts = ["jupyterlab_markup/labextension"]

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder"]
build-function = "hatch_jupyter_builder.npm_builder"
#skip_if_exists = ["jupyterlab_markup/labextension/static/style.js"] TODO - wait for fix in hatch-jupyter-builder
ensured-targets = ["jupyterlab_markup/labextension/static/style.js", "jupyterlab_markup/labextension/package.json"]
install-pre-commit-hook = true

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = "jlpm"
