[metadata]
name = jupyterlab_markup
version = 0.2.1
description = Additional markdown rendering support in markdown.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/agoose77/jupyterlab-markup
author = Angus Hollands
license = BSD-3-Clause
keywords =
    Interactive
    Interpreter
    Web
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    notebook
package_dir =
    = src_py
packages = find:
include_package_data = True
zip_safe = False

[options.data_files]
etc/jupyter/jupyter_notebook_config.d =
    etc/jupyterlab-markup-serverextension.json

[options.packages.find]
where =
    py_src
