[metadata]
name = jupyterlab_markup
version = 1.0.0
description = Extensible markdown rendering support in markdown
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/agoose77/jupyterlab-markup.git"
author = Angus Hollands
author_email = goosey15@gmail.com
license = BSD-3-Clause
license_file = LICENSE
platforms =
    Linux
    Mac OS X
    Windows
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Framework :: Jupyter
keywords =
    Jupyter
    JupyterLab
    JupyterLab3
    Markdown
    MarkdownIt
project_urls =
    Bug Tracker = https://github.com/agoose77/jupyterlab-markup/issues

[options]
packages = find:
install_requires =
    jupyterlab>=3.0,==3.*
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.data_files]#
# See also setup.py for the labextension
share/jupyter/labextensions/@agoose77/jupyterlab-markup =
    install.json
etc/jupyter/jupyter_server_config.d =
    jupyter-config/jupyterlab_markup.json

[bdist_wheel]
universal = False